added cat image

--- a/catblog.html
+++ b/catblog.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Welcome to Cat City</h1>
+    <img width="250" src="img/catcity.jpg" alt="Cat City">
     <h2>Discount Catnip</h2>
     <p>Looking for catnip on the low low? How about a new scratch post to keep your claws looking dandy?</p>
     <p>Cat City brings you the best prices on the internet...MEOW!!!</p>
